--- a/src/stackexercise/FXMLDocument.fxml
+++ b/src/stackexercise/FXMLDocument.fxml
@@ -39,13 +39,13 @@
                         <Font name="System Bold" size="18.0" />
                      </font>
                   </Label>
-                  <TextField fx:id="msgTextField" layoutX="22.0" layoutY="366.0" prefHeight="25.0" prefWidth="240.0" AnchorPane.leftAnchor="22.0" AnchorPane.rightAnchor="52.0" />
-                  <Button fx:id="pushButton" layoutX="234.0" layoutY="95.0" mnemonicParsing="false" onAction="#pushButtonFired" text="PUSH" />
-                  <Button fx:id="topButton" layoutX="22.0" layoutY="137.0" mnemonicParsing="false" onAction="#topButtonFired" text="TOP" />
-                  <Button fx:id="popButton" layoutX="133.0" layoutY="195.0" mnemonicParsing="false" onAction="#popButtonFired" text="POP" />
-                  <Button fx:id="emptyButton" layoutX="127.0" layoutY="252.0" mnemonicParsing="false" onAction="#emptyButtonClicked" text="EMPTY" />
-                  <Button fx:id="isEmptyButton" layoutX="56.0" layoutY="297.0" mnemonicParsing="false" onAction="#isEmptyButtonClicked" text="IS-EMTPY" />
-                  <Button fx:id="isFullButton" layoutX="188.0" layoutY="297.0" mnemonicParsing="false" onAction="#isFullButtonClicked" text="IS-FULL" />
+                  <Button fx:id="pushButton" layoutX="234.0" layoutY="95.0" mnemonicParsing="false" onAction="#pushButtonFired" prefHeight="25.0" prefWidth="125.0" text="PUSH" />
+                  <Button fx:id="topButton" layoutX="22.0" layoutY="137.0" mnemonicParsing="false" onAction="#topButtonFired" prefHeight="25.0" prefWidth="125.0" text="TOP" />
+                  <Button fx:id="popButton" layoutX="133.0" layoutY="195.0" mnemonicParsing="false" onAction="#popButtonFired" prefHeight="25.0" prefWidth="101.0" text="POP" />
+                  <Button fx:id="emptyButton" layoutX="127.0" layoutY="252.0" mnemonicParsing="false" onAction="#emptyButtonClicked" prefHeight="25.0" prefWidth="108.0" text="EMPTY" />
+                  <Button fx:id="isEmptyButton" layoutX="41.0" layoutY="322.0" mnemonicParsing="false" onAction="#isEmptyButtonClicked" prefHeight="25.0" prefWidth="108.0" text="IS-EMTPY" />
+                  <Button fx:id="isFullButton" layoutX="206.0" layoutY="322.0" mnemonicParsing="false" onAction="#isFullButtonClicked" prefHeight="25.0" prefWidth="91.0" text="IS-FULL" />
+                  <Button fx:id="createButton" layoutX="64.0" layoutY="408.0" mnemonicParsing="false" onAction="#createButtonFired" prefHeight="25.0" prefWidth="230.0" text="CREATE" />
                </children>
             </AnchorPane>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
